[gd_scene load_steps=9 format=2]

[ext_resource path="res://Image/human_01.png" type="Texture" id=1]
[ext_resource path="res://font/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scences/buttons/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scences/buttons/Con_Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://scences/buttons/Option_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://scences/animation/fade_in.tscn" type="PackedScene" id=6]
[ext_resource path="res://scences/Control.gd" type="Script" id=7]
[ext_resource path="res://scences/go_test_button.gd" type="Script" id=8]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 221.0
margin_right = -121.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Main"]
margin_right = 726.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Main/CenterContainer"]
margin_left = 250.0
margin_top = 219.0
margin_right = 475.0
margin_bottom = 861.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="CenterContainer2" type="CenterContainer" parent="Main"]
margin_left = 730.0
margin_right = 1456.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
margin_left = 1460.0
margin_right = 1578.0
margin_bottom = 1080.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Main/VBoxContainer"]
margin_top = 266.0
margin_right = 118.0
margin_bottom = 303.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "幻世界"
align = 2

[node name="buttons" type="VBoxContainer" parent="Main/VBoxContainer"]
margin_top = 313.0
margin_right = 118.0
margin_bottom = 450.0

[node name="NewGameButton" parent="Main/VBoxContainer/buttons" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 118.0
margin_bottom = 43.0
hint_tooltip = ""

[node name="Con_Button" parent="Main/VBoxContainer/buttons" instance=ExtResource( 4 )]
margin_top = 47.0
margin_right = 118.0
margin_bottom = 90.0
hint_tooltip = ""

[node name="Option_button" parent="Main/VBoxContainer/buttons" instance=ExtResource( 5 )]
margin_top = 94.0
margin_right = 118.0
margin_bottom = 137.0
hint_tooltip = ""

[node name="go_test_button" type="Button" parent="Main/VBoxContainer"]
margin_top = 460.0
margin_right = 118.0
margin_bottom = 503.0
custom_fonts/font = ExtResource( 2 )
text = "测试"
align = 2
script = ExtResource( 8 )
sc_name = "test_menu"

[node name="Button" type="Button" parent="Main/VBoxContainer"]
margin_top = 513.0
margin_right = 118.0
margin_bottom = 556.0
custom_fonts/font = ExtResource( 2 )
text = "退出"
align = 2

[node name="CenterContainer" type="CenterContainer" parent="Main/VBoxContainer"]
margin_top = 566.0
margin_right = 118.0
margin_bottom = 766.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 13

[node name="Label2" type="Label" parent="Main/VBoxContainer"]
margin_top = 776.0
margin_right = 118.0
margin_bottom = 813.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "版本0.021"

[node name="ColorRect" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="pressed" from="Main/VBoxContainer/go_test_button" to="." method="_on_go_test_button_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="fade_finished" from="ColorRect" to="." method="_on_ColorRect_fade_finished"]
